# AlectoCore-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
alectocore_sdk/: __init__.py  client.py
