[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alectocore-sdk"
version = "0.1.0"
description = "Official Python SDK for Alecto Core"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = "MIT"
authors = [
  { name = "StrathWorks Ltd", email = "support@alectocore.com" }
]
keywords = ["alectocore", "moderation", "content-moderation", "trust-and-safety", "api-client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://alectocore.com/sdk"
Documentation = "https://alectocore.com/sdk"
Repository = "https://github.com/StrathWorks/AlectoCore-python"
"Bug Tracker" = "https://github.com/StrathWorks/AlectoCore-python/issues"

[tool.setuptools.packages.find]
where = ["."]
